2007-11-27  Tor Lillqvist  <tml@novell.com>

	Merge from trunk:

	* glib/gutils.c (_glib_get_locale_dir) [Win32]: Use either
	lib/locale or share/locale depending on which one is in
	GLIB_LOCALE_DIR. When the configury recognizes GNU gettext (based
	on the _nl_msg_cat_cntr variable, eek), share/locale gets used.

	* glib-zip.in: Likewise, look for message catalogs either in
	lib/locale or share/locale.

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.4 ===

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	* tests/base64-test.c: Fix memory overrun.

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* glib/gbase64.c (g_base64_encode): Don't refuse to encode
	a single byte.  (Milan Crha)

	* tests/base64-test.c: Test encoding short strings.

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* glib/goption.c: Use g_print to print out --help text in
	locale encoding.  (#469551, Takao Fujiwara)

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* glib/gkeyfile.c: Set length out param in list-returning functions
	to 0 when returning NULL.  (#498728, Christian Persch)

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* configure.in: Check whether assembler supports numerical local
	labels.

	* glib/gatomic.c: Fix powerpc implementation of atomic for
	platforms where the assembler doesn't support numerical local
	labels.  (#445362)

2007-11-19  Marco Barisione  <marco@barisione.org>

	Merge from trunk:

	* glib/gregex.c: When the compilation of a pattern fails in the error
	message use the character offset and not the byte offset.

	* glib/gregex.c: Pass an unsigned long instead of an int to
	pcre_fullinfo() to avoid problems on 64-bit systems (#498113, Kouhei
	Sutou)
